--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Halnique\\Portfolio\\": "packages/portfolio/src/"
         },
         "classmap": [
             "database/seeds",
@@ -43,7 +44,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "HalniqueTest\\Portfolio\\": "packages/portfolio/tests/"
         }
     },
     "minimum-stability": "dev",
