--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "fideloper/proxy": "^4.0",
-        "ext-json": "^1.6"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
