--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ script:
   - phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
-  - travis_retry php vendor/bin/coveralls
+  - travis_retry php vendor/bin/php-coveralls
