fix docker nginx ports

--- a/docker/workspace/Dockerfile
+++ b/docker/workspace/Dockerfile
@@ -18,6 +18,8 @@ RUN curl --silent --fail --location --retry 3 --output ./installer.php --url htt
  && php installer.php --no-ansi --install-dir=/usr/bin --filename=composer \
  && rm -f installer.php
 
+RUN apt-get install -y zip unzip
+
 WORKDIR /var/www
 
 CMD ["/bin/bash"]
