--- a/docker/nginx/etc/nginx/conf.d/default.conf
+++ b/docker/nginx/etc/nginx/conf.d/default.conf
@@ -24,12 +24,12 @@ server {
     location ~ \.php$ {
         try_files $uri /index.php =404;
         fastcgi_pass unix:/var/run/php-fpm.sock;
-        #fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_read_timeout 600;
+        fastcgi_hide_header X-Powered-By;
         include fastcgi_params;
     }
 }
