--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 php:
-#  - 7.1
+  - 7.1
   - 7.2
   - 7.3
 
@@ -19,7 +19,7 @@ before_script:
   - chmod -R 777 build/logs
 
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls
