--- a/.env.testing
+++ b/.env.testing
@@ -14,14 +14,14 @@ DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=redis
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
