--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
+      - ./docker/mysql/etc/mysql/conf.d/zz-docker.cnf:/etc/mysql/conf.d/zz-docker.cnf
       - mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
