enable gzip on css/js/json

--- a/docker/nginx/etc/nginx/conf.d/default.conf
+++ b/docker/nginx/etc/nginx/conf.d/default.conf
@@ -7,6 +7,9 @@ server {
     root /var/www/public;
     index index.php;
 
+    gzip on;
+    gzip_types text/css application/javascript application/json;
+
     ssl_certificate "/etc/pki/nginx/server.crt";
     ssl_certificate_key "/etc/pki/nginx/private/server.key";
     ssl_session_cache shared:SSL:1m;
