--- a/docker/nginx/etc/nginx/conf.d/default.conf
+++ b/docker/nginx/etc/nginx/conf.d/default.conf
@@ -24,6 +24,10 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    location ~ .*\.(jpe?g|ico|gif|png|css|js) {
+        expires 14d;
+    }
+
     location ~ \.php$ {
         try_files $uri /index.php =404;
         fastcgi_pass unix:/var/run/php-fpm.sock;
