--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Portfolio
 APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
@@ -16,7 +16,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
 REDIS_HOST=
@@ -42,3 +42,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_HTTPS=false
