--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "popper.js": "^1.12",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-linkify": "^1.0.0-alpha",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.20.3",
         "sass-loader": "^7.1.0"
