--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "storybook": "start-storybook"
+        "storybook": "start-storybook -p 30000"
     },
     "dependencies": {},
     "devDependencies": {
@@ -27,6 +27,20 @@
         "react-linkify": "^1.0.0-alpha",
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.23.3",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "@storybook/addon-info": "^5.1.9",
+        "@types/jest": "^24.0.15",
+        "@types/react": "^16.8.20",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-linkify": "^0.2.0",
+        "@types/storybook__react": "^4.0.2",
+        "awesome-typescript-loader": "^5.2.1",
+        "jest": "^24.8.0",
+        "npm-check": "^5.9.0",
+        "react-docgen-typescript-loader": "^3.1.0",
+        "ts-jest": "^24.0.2",
+        "ts-loader": "^6.0.3",
+        "typescript": "^3.5.2",
+        "vue-template-compiler": "^2.6.10"
     }
 }
