--- a/.env.testing
+++ b/.env.testing
@@ -45,3 +45,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ADMIN_HTTPS=false
 ADMIN_ROUTE_PREFIX=admin
+
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
