--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ADMIN_HTTPS=
 ADMIN_ROUTE_PREFIX=
+
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
