feat: composer update

--- a/docker/workspace/Dockerfile
+++ b/docker/workspace/Dockerfile
@@ -4,23 +4,17 @@ LABEL maintainer="halnique <shunsuke4dev@gmail.com>"
 
 USER root
 
-RUN apt full-upgrade
+COPY --from=composer /usr/bin/composer /usr/local/bin/composer
 
-RUN pecl install xdebug \
- && docker-php-ext-enable xdebug \
- && docker-php-ext-install pdo_mysql
-
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash - \
+RUN apt full-upgrade \
+ && curl -sL https://deb.nodesource.com/setup_10.x | bash - \
  && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
  && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
  && apt-get update \
- && apt-get install -y yarn
-
-RUN curl --silent --fail --location --retry 3 --output ./installer.php --url https://getcomposer.org/installer \
- && php installer.php --no-ansi --install-dir=/usr/bin --filename=composer \
- && rm -f installer.php
-
-RUN apt-get install -y zip unzip git
+ && apt-get install -y yarn zip unzip git \
+ && pecl install xdebug \
+ && docker-php-ext-enable xdebug \
+ && docker-php-ext-install pdo_mysql
 
 WORKDIR /var/www
 
