--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": ">=7.4",
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^8.0",
+        "laravel/ui": "^3.3",
         "predis/predis": "^1.1"
     },
     "require-dev": {
@@ -23,7 +24,7 @@
         "fzaninotto/faker": "^1.4",
         "laravel/tinker": "^2.6",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "nunomaduro/collision": "^5.5",
         "php-coveralls/php-coveralls": "^2.1",
         "phpunit/phpunit": "^9.5"
     },
@@ -43,12 +44,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/",
             "Halnique\\Portfolio\\": "packages/portfolio/src/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
